knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Persona__c/linkedin_si__Persona__c.object-meta.xml
<CustomObject>
    <description>Role type persona pertaining to a LinkedIn Sales Insights Company Profile</description>
    <label>LinkedIn Persona</label>
    <nameField>
        <label>Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LinkedIn Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>