knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Persona__c/fields/linkedin_si__Active__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether a Persona is currently in use under its Company Profile</description>
    <inlineHelpText>Indicates whether a Persona is currently in use under its Company Profile</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>