knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Persona__c/fields/linkedin_si__Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Company_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LinkedIn Company Profile</label>
    <referenceTo>linkedin_si__Company_Profile__c</referenceTo>
    <relationshipLabel>LinkedIn Personas</relationshipLabel>
    <relationshipName>Personas</relationshipName>
    <type>Lookup</type>
</CustomField>