knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Persona__c/fields/linkedin_si__Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Contract_ID__c</fullName>
    <description>The LinkedIn Sales Insights contract ID where this Persona was created</description>
    <label>Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>