knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Persona__c/fields/linkedin_si__Employee_Growth__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Employee_Growth__c</fullName>
    <description>The percent change in individuals matching this Persona at the company over the past 12 months</description>
    <inlineHelpText>The percent change in individuals matching this Persona at the company over the past 12 months</inlineHelpText>
    <label>Employee Growth</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>