knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Persona__c/fields/linkedin_si__Employees_Contacted__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Employees_Contacted__c</fullName>
    <description>Number of employees matching this Persona who received InMails or connection requests from at least one of your Sales Navigator users over the past 12 months</description>
    <inlineHelpText>Number of employees matching this Persona who received InMails or connection requests from at least one of your Sales Navigator users over the past 12 months</inlineHelpText>
    <label>Employees Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>