knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Persona__c/fields/linkedin_si__Jobs_Posted__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Jobs_Posted__c</fullName>
    <description>Number of open job postings on LinkedIn that match this Persona</description>
    <inlineHelpText>Number of open job postings on LinkedIn that match this Persona</inlineHelpText>
    <label>Jobs Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>