knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Persona__c/fields/linkedin_si__SN_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__SN_Connectivity__c</fullName>
    <description>Number of employees matching this Persona who are connected with at least one of your Sales Navigator users</description>
    <inlineHelpText>Number of employees matching this Persona who are connected with at least one of your Sales Navigator users</inlineHelpText>
    <label>Sales Navigator Connectivity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>